--- a/index.html
+++ b/index.html
@@ -19,23 +19,22 @@
     sf.postMessage("usi");
     // sf.postMessage('setoption name UCI_AnalyseMode value true');
     // sf.postMessage('setoption name Analysis Contempt value Off');
+    console.log("============ START ============");
+    sf.postMessage("setoption name Threads value 1");
+    sf.postMessage("setoption name USI_Ponder value false");
+    sf.postMessage("setoption name USI_OwnBook value false");
+    sf.postMessage("setoption name USI_Hash value 1024");
+    console.log("isready");
+    sf.postMessage("isready");
     setTimeout(() => {
-      console.log("============ START ============");
-      sf.postMessage("setoption name Threads value 1");
-      sf.postMessage("setoption name USI_Ponder value false");
-      sf.postMessage("setoption name USI_OwnBook value false");
-      sf.postMessage("setoption name USI_Hash value 1024");
-      console.log("isready");
-      sf.postMessage("isready");
-      console.log("endready");
-      // console.log("usinewgame");
-      // sf.postMessage("usinewgame");
-      // console.log("position");
-      // sf.postMessage(
-      //   "position sfen ln1g5/1r4k2/p2pppn2/2ps2p2/1p7/2P6/PPSPPPPLP/2G2K1pr/LN4G1b b BG2SLPnp 1"
-      // );
-      // console.log("go");
-      // sf.postMessage("go btime 0 wtime 0 byoyomi 30");
+      console.log("usinewgame");
+      sf.postMessage("usinewgame");
+      console.log("position");
+      sf.postMessage(
+        "position sfen ln1g5/1r4k2/p2pppn2/2ps2p2/1p7/2P6/PPSPPPPLP/2G2K1pr/LN4G1b b BG2SLPnp 1"
+      );
+      console.log("go");
+      sf.postMessage("go btime 0 wtime 0 byoyomi 30");
       // sf.postMessage("go depth " + depth);
     }, 3000);
   });
