--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     var depth = 5;
     var listener = function (line) {
       console.log(">", line);
-      if (line.includes("bestmove") && depth < 25) {
+      if (line.includes("bestmove") && depth < 10) {
         depth++;
         console.log("============ DEPTH " + depth + " ============");
         sf.postMessage("go depth " + depth);
@@ -20,15 +20,16 @@
     // sf.postMessage('setoption name UCI_AnalyseMode value true');
     // sf.postMessage('setoption name Analysis Contempt value Off');
     console.log("============ START ============");
-    sf.postMessage("setoption name Threads value 1");
-    sf.postMessage("setoption name USI_Ponder value false");
-    sf.postMessage("setoption name USI_OwnBook value false");
-    sf.postMessage("setoption name USI_Hash value 1024");
-    console.log("isready");
-    sf.postMessage("isready");
     setTimeout(() => {
-      console.log("usinewgame");
-      sf.postMessage("usinewgame");
+      sf.postMessage("setoption name USI_Ponder value false");
+      sf.postMessage("setoption name USI_OwnBook value false");
+      sf.postMessage("setoption name USI_Hash value 1024");
+      console.log("set threads");
+      sf.postMessage("setoption name Threads value 10");
+      console.log("isready");
+      sf.postMessage("isready");
+    }, 3000);
+    setTimeout(() => {
       console.log("position");
       sf.postMessage(
         "position sfen ln1g5/1r4k2/p2pppn2/2ps2p2/1p7/2P6/PPSPPPPLP/2G2K1pr/LN4G1b b BG2SLPnp 1"
@@ -36,6 +37,6 @@
       console.log("go");
       sf.postMessage("go btime 0 wtime 0 byoyomi 30");
       // sf.postMessage("go depth " + depth);
-    }, 3000);
+    }, 10000);
   });
 </script>
