--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     var depth = 5;
     var listener = function (line) {
       console.log(">", line);
-      if (line.includes("bestmove") && depth < 10) {
+      if (line.includes("bestmove") && depth < 20) {
         depth++;
         console.log("============ DEPTH " + depth + " ============");
         sf.postMessage("go depth " + depth);
@@ -19,13 +19,15 @@
     sf.postMessage("usi");
     // sf.postMessage('setoption name UCI_AnalyseMode value true');
     // sf.postMessage('setoption name Analysis Contempt value Off');
+    var hardwareConcurrency = navigator.hardwareConcurrency;
+    console.log("your hardware concurrency is " + hardwareConcurrency);
     console.log("============ START ============");
     setTimeout(() => {
       sf.postMessage("setoption name USI_Ponder value false");
       sf.postMessage("setoption name USI_OwnBook value false");
       sf.postMessage("setoption name USI_Hash value 1024");
       console.log("set threads");
-      sf.postMessage("setoption name Threads value 10");
+      sf.postMessage(`setoption name Threads value ${hardwareConcurrency}`);
       console.log("isready");
       sf.postMessage("isready");
     }, 3000);
