--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <script src="yaneuraou.js"></script>
 <script>
-  YaneuraOu().then((sf) => {
-    window.sf = sf;
+  YaneuraOu().then((yn) => {
+    window.yn = yn;
     let isReady = false;
     let depth = 5;
     const listener = function (line) {
@@ -12,28 +12,28 @@
       if (line.includes("bestmove") && depth < 20) {
         depth++;
         console.log("============ DEPTH " + depth + " ============");
-        sf.postMessage("go depth " + depth);
+        yn.postMessage("go depth " + depth);
       }
     };
 
-    sf.addMessageListener(listener);
+    yn.addMessageListener(listener);
 
-    sf.postMessage("usi");
+    yn.postMessage("usi");
     const hardwareConcurrency = navigator.hardwareConcurrency;
     console.log("your hardware concurrency is " + hardwareConcurrency);
     setTimeout(() => {
-      sf.postMessage("setoption name USI_Ponder value false");
-      sf.postMessage("setoption name USI_OwnBook value false");
-      sf.postMessage("setoption name USI_Hash value 1024");
-      sf.postMessage(`setoption name Threads value ${hardwareConcurrency}`);
-      sf.postMessage("isready");
+      yn.postMessage("setoption name USI_Ponder value false");
+      yn.postMessage("setoption name USI_OwnBook value false");
+      yn.postMessage("setoption name USI_Hash value 1024");
+      yn.postMessage(`setoption name Threads value ${hardwareConcurrency}`);
+      yn.postMessage("isready");
     }, 1);
     setInterval(() => {
       if (isReady) {
-        sf.postMessage(
+        yn.postMessage(
           "position sfen ln1g5/1r4k2/p2pppn2/2ps2p2/1p7/2P6/PPSPPPPLP/2G2K1pr/LN4G1b b BG2SLPnp 1"
         );
-        sf.postMessage("go depth " + depth);
+        yn.postMessage("go depth " + depth);
         isReady = false;
       }
     }, 1000);
